# grupo6

./: Cargo.toml  base.sql  cita.rs  cita_controller.rs  cita_repository.rs  cita_service.rs  config.rs  especialidad.rs  especialidad_controller.rs  especialidad_repository.rs  especialidad_service.rs  main.rs  medico_service.rs  paciente.rs  paciente_controller.rs  paciente_repository.rs  util.rs
src/: config.rs  main.rs
src/controller/: cita_controller.rs  diagnostico_controller.rs  especialidad_controller.rs  medico_controller.rs  mod.rs  paciente_controller.rs
src/models/: cita.rs  diagnostico_model.rs  especialidad.rs  medico.rs  mod.rs  paciente.rs
src/repository/: cita_repository.rs  diagnostico_repository.rs  especialidad_repository.rs  medico_repository.rs  mod.rs  paciente_repository.rs
src/service/: cita_service.rs  diagnostico_service.rs  especialidad_service.rs  mod.rs  paciente_service.rs
src/utils/: util.rs
